# cloudscraper

./: .codacy.yml  .coveragerc  .flake8  .gitignore  .pypirc  .travis.yml  CHANGELOG.md  CLEANUP_REPORT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PRODUCTION_READY_SUMMARY.md  Pipfile  README.md  UPGRADE_SUMMARY.md  browsers.json  captcha_info.md  dev_requirements.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_advanced_features.py  test_basic_functionality.py  test_cloudflare_site.py  test_cloudscraper25.py  test_cloudscraper25_comprehensive.py  test_comprehensive_final.py  test_real_world.py  test_turnstile.py  test_v3_challenges.py  tox.ini
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report-template.md
.github/workflows/: ci.yml
cloudscraper/: __init__.py  cloudflare.py  cloudflare_v2.py  cloudflare_v3.py  exceptions.py  help.py  javascript_interpreter.py  javascript_interrupter.py  js2py_interrupter.py  jsfuck.py  nodejs_interrupter.py  stealth.py  turnstile.py
cloudscraper/captcha/: 2captcha.py  9kw.py  __init__.py  anticaptcha.py  capmonster.py  capsolver.py  captchaai.py  deathbycaptcha.py
cloudscraper/exceptions/: cloudflare_exceptions.py  reCaptcha_exceptions.py
cloudscraper/interpreters/: __init__.py  chakracore.py  encapsulated.py  interpreters.lst  js2py.py  js2py_interpreter.py  jsunfuck.py  native.py  nodejs.py  nodejs_interpreter.py  v8.py
cloudscraper/reCaptcha/: 2captcha.py  9kw.py  __init__.py  anticaptcha.py  deathbycaptcha.py  exceptions.py
cloudscraper/user_agent/: __init__.py  browsers.json  browsers.json-1.2.18
cloudscraper25/: __init__.py  exceptions.py  proxy_manager.py
cloudscraper25/captcha/: 2captcha.py  anticaptcha.py  capmonster.py
cloudscraper25/interpreters/: chakracore.py  encapsulated.py  jsunfuck.py  native.py  v8.py
cloudscraper25/user_agent/: __init__.py
examples/: turnstile_example.py
tests/: __init__.py  test_cloudscraper.py  test_modern.py
tests/fixtures/: bfm_07_01_2021.html  cf_recaptcha_15_04_2019.html  js_challenge-27-05-2020.html  js_challenge1_16_05_2020.html  js_challenge2_16_05_2020.html  js_challenge_02_11_2021.html  js_challenge_03_12_2018.html  js_challenge_05-03-2020.html  js_challenge_09_06_2016.html  js_challenge_10_04_2019.html  js_challenge_11_12_2019.html  js_challenge_13_03_2019.html  js_challenge_21_03_2019.html  js_challenge_21_05_2015.html  js_challenge_26_05_2020.html  reCaptcha_challenge_12_12_2019.html  requested_page.html
